--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
+    "keen-slider": "^6.8.5",
     "next": "13.1.6",
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.21",
